// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot custom 1`] = `
<figure
  class="custom-class yozora-image"
>
  <img
    alt="avatar"
    src="https://avatars.githubusercontent.com/u/42513619"
    style="color:orange"
  />
</figure>
`;

exports[`snapshot default 1`] = `
<figure
  class="yozora-image"
>
  <img
    alt="https://avatars.githubusercontent.com/u/42513619"
    src="https://avatars.githubusercontent.com/u/42513619"
  />
</figure>
`;
